--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   intl: ^0.20.2
   wakelock_plus: ^1.3.2
   provider: ^6.1.2
+  flutter_tts: ^4.2.2
+  path_provider: ^2.1.5
+  record: ^6.0.0
 
 dev_dependencies:
   flutter_test:
