--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   flutter_tts: ^4.2.2
   path_provider: ^2.1.5
   record: ^6.0.0
+  permission_handler: ^12.0.0
+  flutter_sound: ^9.28.0
+  flutter_secure_storage: ^9.2.4
+  multicast_dns: ^0.3.3
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +38,4 @@ flutter:
 
   assets:
     - .env
+    - assets/images/
