--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,12 +26,14 @@ dependencies:
   flutter_sound: ^9.28.0
   flutter_secure_storage: ^9.2.4
   multicast_dns: ^0.3.3
+  flutter_local_notifications: ^19.2.1
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
